--- a/front/src/index.html
+++ b/front/src/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr" dir="ltr">
+
 <head>
   <meta charset="utf-8">
-  <title>Front</title>
+  <title>KSJ</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -13,6 +14,7 @@
   <link href='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root class="container"></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
